<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLiteBestPractice</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_db">create db</string>
    <string name="add_data">add data</string>
    <string name="delete_data">delete data</string>
    <string name="update_data">update data</string>
    <string name="select_data">select data</string>
    <string name="replace_data">replace data</string>

</resources>
