<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/create_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_db" />

    <Button
        android:id="@+id/add_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data" />

    <Button
        android:id="@+id/delete_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_data" />

    <Button
        android:id="@+id/update_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_data" />

    <Button
        android:id="@+id/select_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_data" />

    <Button
        android:id="@+id/replace_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replace_data" />

</LinearLayout>